--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html>
     <head>
         <title>Rango</title>
@@ -12,6 +13,8 @@
         </div>
         <div>
             <a href="/rango/about/">About</a><br />
+            <img src="{% static "images/rango.jpg" %}"
+                 alt="Picture of Rango" />
         </div>
     </body>
 </html>
