--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -6,15 +6,18 @@
     </head>
 
     <body>
-        <h1>Rango says...</h1>
-        <div>
-            hey there partner! <br />
-            <strong>{{ boldmessage }}</strong><br />
-        </div>
-        <div>
-            <a href="/rango/about/">About</a><br />
-            <img src="{% static "images/rango.jpg" %}"
-                 alt="Picture of Rango" />
-        </div>
+        <h1>Rango says...hello world!</h1>
+
+        {% if categories %}
+            <ul>
+                {% for category in categories %}
+                <li>{{category.name}}</li>
+                {%endfor%}
+            </ul>
+        {% else %}
+            <strong>There are no categories present.</strong>
+        {% endif %}
+
+        <a href="/rango/about/">About</a>
     </body>
 </html>
