Passing chapter 7 tests, but: the "add page" functionality doesn't actually work!!

--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -21,8 +21,13 @@
                 The specified category does not exist.
             {% endif %}
             </div>
+        
+        <div>
+            <a href="/rango/category/{{ category.slug }}/add_page/">Add a New Page</a>
+        </div>
         <div>
             <a href="/rango/">Index</a>
+        </div>
     </body>
 </html>
         
