--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,3 +1,27 @@
+{% extends 'rango/base.html'%}
+{% load staticfiles %}
+{% block title_block %}
+    About Rango
+{% endblock %}
+
+{% block body_block %}
+        <h1>Rango says...</h1>
+        <div>
+            here is the about page. <br />
+            <strong>{{ boldmessage }}</strong><br />
+        </div>
+        <div>
+            <a href="/rango/about/">About</a><br />
+            <a href="/rango/">Index</a><br />
+            <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+            <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
+        </div>
+{% endblock %}
+
+
+
+
+<!--
 <!DOCTYPE html>
 {% load staticfiles %}
 <html>
